> const char * > _dbus_gobject_get_path (GObject *obj) > { > GSList *registrations; > ObjectRegistration *o; > > registrations = g_object_get_data (obj, "dbus_glib_object_registrations"); but dbus_glib_object_registrations is now an ObjectExport struct, not a GSList, in order to fix Bug #36811. This breaks marshalling a GObject (as its object path), which NetworkManager uses. Bug-Debian: <http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=628890>
Created attachment 47453 [details] [review] registrations test: only listen for signals, not all messages Otherwise, we'd reply with an error to messages not intended for us.
Created attachment 47454 [details] [review] [PATCH 2/3] Fix regression in marshalling objects as object paths This regressed while fixing fd.o #36811. NetworkManager apparently uses this idiom. Bug: https://bugs.freedesktop.org/show_bug.cgi?id=37852 Bug-Debian: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=628890
Created attachment 47455 [details] [review] [PATCH 3/3] Regression test for fd.o #37852
Tested-by: Michael Biebl <biebl@debian.org>
Comment on attachment 47453 [details] [review] registrations test: only listen for signals, not all messages I'm uncertain why this test is calling _add_match manually, but anyways; the patch looks correct.
Comment on attachment 47454 [details] [review] [PATCH 2/3] Fix regression in marshalling objects as object paths Looks good.
Comment on attachment 47455 [details] [review] [PATCH 3/3] Regression test for fd.o #37852 Very minor, but why is it G_SIGNAL_DETAILED? Otherwise looks good.
Fixed in git for 0.96
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.